--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <!-- Logotype -->
       <nav>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <!-- Menu navigation -->
         <ul>
           <li><a href="./index.html">Studio</a></li>
@@ -20,10 +20,12 @@
         </ul>
       </nav>
       <!-- Contacts -->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <!-- Banner -->
     <main>
@@ -118,7 +120,7 @@
               height="260"
             />
             <h3>Tom Ford</h3>
-            <p>Traling Icons</p>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -145,7 +147,7 @@
     </main>
     <!-- Footer  -->
     <footer>
-      <a href="./index.html"><span>WEB</span>STUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
